# airepair

./: .gitignore  README.md  pyproject.toml  requirements.txt
cart/: admin.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_order_is_change_battery_alter_order_is_cleaning.py
cart/templates/cart/: cart.html  mini_cart.html  order_form_success.html
cart/templatetags/: cart_tags.py
pages/: admin.py  models.py  receivers.py  utils.py  views.py
pages/migrations/: 0001_initial.py  0002_service_icon.py  0003_youtous.py  0004_goodtoknow.py  0005_alter_goodtoknow_options_alter_service_options_and_more.py  0006_youget.py  0007_galery.py  0008_galery_is_gif.py  0009_galery_sorting.py  0010_alter_galery_options_service_link.py  0011_cleaningslider_alter_service_link.py  0012_alter_cleaningslider_options.py
pages/templatetags/: pages_tags.py
products/: admin.py  models.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options_product_sorting.py  0003_remove_product_image_productimage.py
reviews/: admin.py  models.py  receivers.py  views.py
reviews/migrations/: 0001_initial.py
src/: settings.py  urls.py
static/airpods_icons/: demo.html  selection.json  style.css
static/airpods_icons/fonts/: icomoon.eot
static/css/: style.css  style.min.css  style.scss
static/img/: IMG_5325.HEIC  IMG_5328.HEIC  IMG_5500.HEIC  Step_1.jpg~
static/js/: main.js
templates/: base.html  catalog.html  cleaning.html  connect.html  delivery.html  galery.html  homepage.html  product_detail.html  reviews.html
